--- a/style.css
+++ b/style.css
@@ -9,10 +9,11 @@ body {
   background-color: #f4f4f4;
   color: #333;
 }
-
 header {
   background-color: #222;
-  padding: 1rem 0;
+  padding: 1rem 0; 
+
+
 }
 
 .navbar {
@@ -86,3 +87,87 @@ header {
   object-fit: cover;
   border: 4px solid #00bcd4;
 }
+.home{
+  text-align: center;
+  padding: 100px 20px;
+  background:black;
+}
+#about {background-color:#f9f9f9;
+padding:40px;
+border-radius:10px;
+font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+#about h2{color:#333;margin-bottom:20px;}
+text-align:center;
+}
+3about p{
+  font-size :1.1em;
+  line-height:1.6;
+  text-align:center;
+}
+#skills { 
+background-color:#fff;
+padding:40px;
+max: width 800px;
+margin: auto;
+border-radius:10px;
+font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+3skills h2{
+  font-size:2em;
+  color:#222;
+  text-align:center;
+  margin-bottom: 30px;
+
+}
+.skills-list{
+  list-style:none;
+  padding:0;
+  display:grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap:15px;
+
+}
+.skills-list li{
+  background-color:#f0f0f0;
+  padding:15px;
+  border-radius:8px;
+  font-weight:500;
+  color:#333;
+  transition:transform 0.3s ease;
+
+
+
+}
+.skills-list li:hover{
+  transform:scale(1.05);
+  background-color:#e0e0e0;
+}
+#contact{
+  background-color:#fefefe;
+  padding:50px;
+  max-width: 700px;
+  margin: auto;
+  border-radius: 12px;
+  box-shadow:0 6px 12px rgba(0,0,0,0.1);
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+#contact h2 { font-size:2em;
+  text-align:center;
+  color:#222;
+  margin-bottom:20px;
+}
+#contact p{
+  font-size:1.1em;
+  line-height:1.6;
+  text-align:center;
+}
+
+#contact form {
+  margin-top:30px;
+}
+#contact button:hover{
+  background-color:#0097a7;
+}
+
